# DMaTGColloquium

./: IntegerNumber.cpp  IntegerNumber.h  NaturalNumber.cpp  NaturalNumber.h  Polynomial.cpp  RationalNumber.cpp  RationalNumber.h  calculator.pro  main.cpp  newPolynomial.cpp
Validator/: Validator.cpp
src/: CMakeLists.txt  NaturalNumber.cpp  NaturalNumber.h  Polynomial.cpp  Polynomial.h  RationalNumber.cpp  main.cpp
src/Exceptions/: UniversalStringException.h
src/Validator/: Validator.cpp  Validator.h
src/Validator/Utils/: Lexer.cpp  Lexer.h  Monom.h  Parser.cpp  Parser.h  Token.cpp  Token.h
